# project

./: .gitignore  CMakeLists.txt  CameraPosition.txt  README.md  RTRTextures.sln  RTRTextures.vcxproj  RTRTextures.vcxproj.filters  SolarRender.h  VSIDemoSiliconAtomBloomScene.fs.glsl  VSIDemoSiliconAtomBloomScene.vs.glsl  VSIModelObject.h  VSIUtilMeshLoader.h  VSIUtilShader.cpp
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
common/include/: Camera.h  Loader.h  OGLProgram.h  Renderer.h  VSIUtil.h  VSIUtilBuffers.h  VSIUtilMeshLoader.h  VSIUtilShader.h  VSIUtilTexture.h
common/src/: Camera.cpp  Loader.cpp  OGLProgram.cpp  Perlin.h  VSIUtil.cpp  VSIUtilBuffers.cpp  VSIUtilMeshLoader.cpp  VSIUtilTexture.cpp  test.txt
prototypes/nilesh_mahajan/framework/: RTRTextures.vcxproj  RTRTextures.vcxproj.filters  WinHost.cpp
prototypes/rohit_magdum/: placeholder.txt
prototypes/rohit_magdum/VSIDemos/: VSIDemos.sln
prototypes/sachin_chaudhary/SolarSystem/: SolarSystem.sln
res/Silicon/Shaders/: VSICubeMapping.vs.glsl  VSISilicon.fs.glsl  VSISilicon.vs.glsl
res/SolarSystem/Shaders/: fPlanet.glsl  fSpace.glsl  fSun.glsl  vPlanet.glsl  vSpace.glsl  vSun.glsl
res/schaudhary/Shaders/: fPlanet.glsl
src/features/: RendererRegistrar.cpp  RendererRegistrar.h
src/features/SiliconAtom/: SiliconAtom.cpp  SiliconAtom.h
src/features/SolarSystem/: Noise.cpp  Noise.h  SolarRender.cpp  SolarRender.h  SolarResource.rc  SolarSystemExt.cpp
src/features/Test/: TestRenderer.h
src/framework/: Host.cpp  Host.h  WinFrameWorkUtil.cpp  WinHost.cpp  XHost.cpp
(+155 files in other folders)
